# exo-feat-milestone-3-backend-core

./: .editorconfig  .gitignore  .gitlab-ci.yml  ARCHITECTURE.md  CHANGELOG.md  DECISIONS.md  KNOWN_ISSUES.md  PROJECT_STATUS.md  README.md  RELEASE_NOTES.md  ROADMAP.md  TODO.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  requirements-dev.txt  requirements.txt  run.py
backend/app/: __init__.py  config.py  logging_config.py  main.py
backend/app/api/: __init__.py  chat.py  deps.py  health.py  plugins.py  router.py  system.py  tools.py  ws.py
backend/packaging/: exo-backend.spec  exo_backend.py
docs/: ai-providers.md  api.md  architecture.md  chat.md  developer-guide.md  installation.md  migration-guide.md  plugins.md  tools.md
frontend/: .eslintrc.cjs  .prettierignore  Dockerfile  electron-builder.yml  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.node.json  vite.config.ts
frontend/e2e/: smoke.spec.ts
frontend/electron/: backend.ts  main.ts  preload.ts  tray.ts  tsconfig.json  windowState.ts
frontend/src/: App.tsx  global.d.ts  main.tsx
plugins/: README.md
plugins/hello_exo/: __init__.py  plugin.json
scripts/: bootstrap.ps1  bootstrap.sh  package.ps1  package.sh
tests/: conftest.py  test_ai_providers.py  test_audit.py  test_chat.py  test_chat_api.py  test_eventbus.py  test_health.py  test_plugin_manifest.py  test_plugins.py  test_plugins_api.py  test_repositories.py  test_tools_api.py  test_tools_builtin.py  test_tools_framework.py
(+90 files in other folders)
